# aysnc_secure_chat_application

./: .gitignore  README.md
TLS_server/: .gitignore  CMakeLists.txt  chat_app_server_config.json
TLS_server/certificates/: server.crt
TLS_server/certificates/client_root_CAs/: ClientRootCA2.crt
TLS_server/include/: ___tcp_chat_server.hpp  abstract_chat_server.hpp  abstract_chat_session.hpp  app_dir_path.hpp  async_secure_socket.hpp  async_tcp_socket.hpp  chat_room.hpp  chat_session.hpp  hand_shaker.hpp  interface_async_socket.hpp  interface_chat_participant.hpp  interface_chat_room.hpp  interface_controllable_broadcaster.hpp  interface_private_broadcaster.hpp  interface_public_broadcaster.hpp  interface_ssl.hpp  interface_ssl_broadcaster.hpp  json_loader.hpp  network_config.hpp  ssl_chat_server.hpp  ssl_chat_session.hpp  ssl_hand_shaker.hpp  ssl_loader.hpp  tcp_chat_server.hpp  tcp_chat_session.hpp
TLS_server/src/: abstract_chat_session.cpp  async_secure_socket.cpp  async_tcp_socket.cpp  chat_room.cpp  chat_session.cpp  json_loader.cpp  main.cpp  ssl_chat_session.cpp  ssl_loader.cpp
app_architechture/: README.md  model_view_presenter_for_secure_networking.cpp
certificates/: Client.csr  ClientRootCA.key  ClientRootCA.srl  Server.crt  Server.csr  Server.key  ServerRootCA.crt  ServerRootCA.key  ServerRootCA.srl
server/: CMakeLists.txt
server/include/: hand_shaker.hpp  interface_chat_participant.hpp  interface_chat_room.hpp  interface_controllable_broadcaster.hpp  interface_private_broadcaster.hpp  interface_public_broadcaster.hpp
server/src/: main.cpp
(+101 files in other folders)
